@@ -49,6 +49,9 @@ RUN { \
 		echo 'opcache.fast_shutdown=1'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
+# Required for envsubst variable substitution
+RUN apk add gettext
+
 # Get Drupal source
 RUN set -eux; \
     curl -fSL "https://ftp.drupal.org/files/projects/drupal-${DRUPAL_VERSION}.tar.gz" -o drupal.tar.gz; \
